@@ -9,6 +9,8 @@ version 0.32
 	  of ugly version
 	* Real asynchronous startup for remote stores. Thanks to 
 	  Dennis Leeuw for this bug report (and many others)
+	* Fix end date processing for recurrent events : events can 
+	  repeat for ever or until a specified date
 
 version 0.31 (2007/11/21)
 	* Bug fixes
